[package]
name = "xtb_api"
version = "0.0.1"
edition = "2021"
description = "Rust wrapper for the XTB API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Gruaba/rust_xtb_api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
